# adversarial_ML

./: .gitignore  README.md  pyproject.toml  run_detection_performance.py  run_gradient_adv.py
adv_lib/: __init__.py  art_pytorch_obj_detecor.py  coco_labels.py  coco_transform.py  predict_method.py  utils.py
example_scripts/: run_yolo_v5.py
sample_COCO_val_2017_data/: annotations.json
